--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.4",
     "clsx": "^1.2.1",
     "next": "^13.0.4",
     "react": "^18.2.0",
