--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.4",
     "clsx": "^1.2.1",
+    "dayjs": "^1.11.6",
     "next": "^13.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
